--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ preferences.json
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+/javauitest/uitest/target/
+/javauitest/uitest/nbproject/
