--- a/uitest/package.json
+++ b/uitest/package.json
@@ -10,6 +10,7 @@
     "chai-as-promised": "^7.1.1",
     "electron": "^6.0.12",
     "mocha": "^5.2.0",
+    "webdriverio": "^6.0.0",
     "spectron": "^10.0.0"
   },
   "engines": {
