--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,10 +24,7 @@ jobs:
 
     - name: Get dependencies
       run: |
-        go get -u github.com/asticode/go-astilectron
-        go get -u github.com/asticode/go-astilectron-bundler
-        go get -u github.com/asticode/go-astilectron-bootstrap
-        go get -v -t -d ./...
+        make installDependencies
         if [ -f Gopkg.toml ]; then
             curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
             dep ensure
