--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,6 +33,8 @@ jobs:
     - name: Build
       run: |
         export PATH=$PATH:$(go env GOPATH)/bin
+        ls -l $(go env GOPATH)/bin
+        ls -l $(go env GOPATH)/src
         make
 
     - name: Test
