fix makefile for github actions

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,9 +32,8 @@ jobs:
 
     - name: Build
       run: |
-        export PATH=$PATH:$(go env GOPATH)/bin
-        ls -l $(go env GOPATH)/bin
-        ls -l $(go env GOPATH)/src
+        export PATH=$PATH:$(go env GOBIN)
+        ls -l $(go env GOBIN)
         make
 
     - name: Test
