--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -49,7 +49,8 @@ jobs:
       run:
         working-directory: uitest
     strategy:
-      os: [ubuntu-16.04]
+      matrix:
+        os: [ubuntu-16.04]
     steps:
 
     - name: Unarchive
