--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,7 @@ jobs:
         go-version: ^1.14
       id: go
 
-    - name: Check out code into the Go module directory
+    - name: Check out code 
       uses: actions/checkout@v2
 
     - name: Get dependencies
@@ -40,8 +40,9 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
          name: binaries
-         path: ./output/darwin-amd64/**/*
-         path: ./output/linux-amd64/**/*
+         path: |
+           ./output/darwin-amd64/**/*
+           ./output/linux-amd64/**/*
 
   uitest:
     name: UITest
