run uitest on github

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -63,7 +63,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: binaries
-        path: ../output
+        path: ./output
 
     - name: display working dir
       run: |
