--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -69,6 +69,9 @@ jobs:
         find ../output -type f -exec chmod a+x {} \;
         find ../output -type f -ls
 
+    - name: pre-provision the exe
+      run ../output/darwin-amd64/Synergize.app/Contents/MacOS/Synergize -PROVISION
+      
     - name: SetupNode
       uses: actions/setup-node@v2.1.1
 
