support for a -PROVISION flag to support ui tests

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -70,7 +70,7 @@ jobs:
         find ../output -type f -ls
 
     - name: pre-provision the exe
-      run ../output/darwin-amd64/Synergize.app/Contents/MacOS/Synergize -PROVISION
+      run: ../output/darwin-amd64/Synergize.app/Contents/MacOS/Synergize -PROVISION
 
     - name: SetupNode
       uses: actions/setup-node@v2.1.1
