--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# files used by the Docker-based jekyll script to preview documentation changes (see ../jekyll-driver/README.md)
+Gemfile
+Gemfile.lock
+Dockerfile
+docker-compose.yml
+
 TAGS
 VOICES
 bind*
