--- a/midi/midi.cfg
+++ b/midi/midi.cfg
@@ -18,10 +18,10 @@ SOLO.note = [17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32]
 osc-enabled.note = [33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48]
 
 #checked
-WAVE.note = [49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64]
+wkWAVE.note = [49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64]
 
 #checked
-KEYPROP.note = [65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80]
+wkKEYPROP.note = [65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80]
 
 #checked
 FILTER.note = [81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96]
