page init for voice, keyeq, keyprop and filters tabs

--- a/midi/midi.cfg
+++ b/midi/midi.cfg
@@ -55,8 +55,8 @@ VTCENT.cc= 39
 #checked range min="0" max="31" -> 0 .. 31
 VTSENS.cc= 40
 #checked range min="-127" max="128" -> 0 .. 255 XXXXXXX
-VTTRANS.cc= 41
-VTTRANS.scale= 2
+VTRANS.cc= 41
+VTRANS.scale= 2
 
 [freq-envelopes-tab]
 # CC msg that activates the page/tab:
