fix mapping for keyprop - prelim support for button controls

--- a/midi/synergize-touchosc.cfg
+++ b/midi/synergize-touchosc.cfg
@@ -5,112 +5,100 @@
 channel = 16
  
 [voice-tab]
-# CC msg that activates the page/tab:
 page-init.cc = 122
 page-init.value  = 122
 
-#checked
 MUTE.note = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16]
 
-#chcecked
 SOLO.note = [17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32]
 
 osc-enabled.note = [33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48]
 
-#checked
 wkWAVE.note = [49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64]
 
-#checked
 wkKEYPROP.note = [65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80]
 
-#checked
 FILTER.note = [81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96]
 
 add-osc.note = 98
 del-osc.note = 99
 
-#checked range min="-11" max="31" -> 0 .. 42
+# range min="-11" max="31" -> 0 .. 42
 # CC1 for Osc# 1, CC2 for Osc# 2, etc.
 OHARM.cc = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16] 
 
-#checked range min="-63 max="63" -> 0 .. 127
+# range min="-63 max="63" -> 0 .. 127
 FDETUN.cc = [17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32]
 
-#checked range min="0" max="127" -> 0 .. 127
+# range min="0" max="127" -> 0 .. 127
 VIBDEL.cc= 33
-#checked range min="0" max="127" -> 0 .. 127
+# range min="0" max="127" -> 0 .. 127
 VIBRAT.cc= 34
-#checked range min="-128" max="128" -> 0 .. 256 XXXXXXX
+# range min="-128" max="128" -> 0 .. 256 
 VIBDEP.cc= 35
 VIBDEP.scale=2
-#checked range min="-128" max="128" -> 0 .. 256 XXXXXXX
+# range min="-128" max="128" -> 0 .. 256 
 APVIB.cc= 36
 APVIB.scale=2
-#checked range min="0" max="32" -> 0 .. 32
+# range min="0" max="32" -> 0 .. 32
 VACENT.cc= 37
-#checked range min="0" max="31" -> 0 .. 31
+# range min="0" max="31" -> 0 .. 31
 VASENS.cc= 38
-#checked range min="0" max="32" -> 0 .. 32
+# range min="0" max="32" -> 0 .. 32
 VTCENT.cc= 39
-#checked range min="0" max="31" -> 0 .. 31
+# range min="0" max="31" -> 0 .. 31
 VTSENS.cc= 40
-#checked range min="-127" max="128" -> 0 .. 255 XXXXXXX
+# range min="-127" max="128" -> 0 .. 255 
 VTRANS.cc= 41
 VTRANS.scale= 2
 
 [freq-envelopes-tab]
-# CC msg that activates the page/tab:
 page-init.cc = 123
 page-init.value  = 123
 
 # 256 means "unused"
-#checked min="-61" max="63" -> 0..124
+# min="-61" max="63" -> 0..124
 envFreqLowVal.poly = [31,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15]
-#checked min="-61" max="63" -> 0..124
+# min="-61" max="63" -> 0..124
 envFreqUpVal.poly  = [47,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30]
 
-#checked min="0" max="84" -> 0..84
+# min="0" max="84" -> 0..84
 envFreqLowTime.poly = [256,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46]
-#checked min="0" max="84" -> 0..84
+# min="0" max="84" -> 0..84
 envFreqUpTime.poly  = [256,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62]
 
 [amp-envelopes-tab]
-# CC msg that activates the page/tab:
 page-init.cc = 124
 page-init.value  = 124
 
-#checked range min="55" max="127" -> 0 ..72
+# range min="55" max="127" -> 0 ..72
 envAmpLowVal.poly = [63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,256]
-#checked min="55" max="127" -> 0 ..72
+# min="55" max="127" -> 0 ..72
 envAmpUpVal.poly  = [79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,256]
 
-#checked min="0" max="84" -> 0..84
+# min="0" max="84" -> 0..84
 envAmpLowTime.poly = [95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110]
-#checked min="0" max="84" -> 0..84
+# min="0" max="84" -> 0..84
 envAmpUpTime.poly = [111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126]
 
 
 [filters-tab]
-# CC msg that activates the page/tab:
 page-init.cc = 125
 page-init.value  = 125
 
-#checked range min="-64" max="63" -> 0..127
+# range min="-64" max="63" -> 0..127
 flt.cc = [42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73]
 
 [keyeq-tab]
-# CC msg that activates the page/tab:
 page-init.cc = 126
 page-init.value  = 126
 
-#checked range min="-24" max="7" -> 0..31
+# range min="-24" max="7" -> 0..31
 keyeq.cc = [74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97]
 
 [keyprop-tab]
-# CC msg that activates the page/tab:
 page-init.cc = 127
 page-init.value  = 127
 
-
-#checked range min="0" max="32" -> 0..32
+# range min="0" max="32" -> 0..32
 keyprop.cc = [98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121]
