add support for accell values

--- a/midi/synergize-touchosc.cfg
+++ b/midi/synergize-touchosc.cfg
@@ -66,6 +66,8 @@ envFreqUpVal.poly  = [47,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30]
 envFreqLowTime.poly = [256,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46]
 # min="0" max="84" -> 0..84
 envFreqUpTime.poly  = [256,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62]
+accelFreqLow.note = 100
+accelFreqUp.note  = 101
 
 [amp-envelopes-tab]
 page-init.cc = 124
@@ -80,6 +82,10 @@ envAmpUpVal.poly  = [79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,256]
 envAmpLowTime.poly = [95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110]
 # min="0" max="84" -> 0..84
 envAmpUpTime.poly = [111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126]
+
+# min="0" max="127" -> 0..127
+accelAmpLow.note = 102
+accelAmpUp.note = 103
 
 
 [filters-tab]
