integration test for outbound MIDI events

--- a/midi/synergize-touchosc.cfg
+++ b/midi/synergize-touchosc.cfg
@@ -4,6 +4,11 @@
 
 channel = 16
  
+
+[voice-freqs-tab]
+page-init.poly = 31
+page-init.value  = 31
+
 [voice-tab]
 page-init.cc = 122
 page-init.value  = 122
