--- a/midi/synergize-touchosc.cfg
+++ b/midi/synergize-touchosc.cfg
@@ -4,14 +4,15 @@
 
 channel = 16
  
+# FIXME: some mappings are discontiguous
 
 [voice-freqs-tab]
-page-init.poly = 31
-page-init.value  = 31
+page-init.poly = 78
+page-init.scale  = 78
 
 [voice-tab]
 page-init.cc = 122
-page-init.value  = 122
+page-init.scale  = 122
 
 MUTE.note = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16]
 
@@ -59,7 +60,7 @@ VTRANS.scale= 2
 
 [freq-envelopes-tab]
 page-init.cc = 123
-page-init.value  = 123
+page-init.scale  = 123
 
 # 256 means "unused"
 # min="-61" max="63" -> 0..124
@@ -76,7 +77,7 @@ accelFreqUp.note  = 101
 
 [amp-envelopes-tab]
 page-init.cc = 124
-page-init.value  = 124
+page-init.scale  = 124
 
 # range min="55" max="127" -> 0 ..72
 envAmpLowVal.poly = [63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,256]
@@ -95,21 +96,21 @@ accelAmpUp.note = 103
 
 [filters-tab]
 page-init.cc = 125
-page-init.value  = 125
+page-init.scale  = 125
 
 # range min="-64" max="63" -> 0..127
 flt.cc = [42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73]
 
 [keyeq-tab]
 page-init.cc = 126
-page-init.value  = 126
+page-init.scale  = 126
 
 # range min="-24" max="7" -> 0..31
 keyeq.cc = [74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97]
 
 [keyprop-tab]
 page-init.cc = 127
-page-init.value  = 127
+page-init.scale  = 127
 
 # range min="0" max="32" -> 0..32
 keyprop.cc = [98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121]
