--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,11 +13,11 @@ jobs:
     runs-on: macos-10.14
     steps:
 
-    - name: Set up Homebrew
-      uses: Homebrew/actions/setup-homebrew@master
-
-    - name: uninstall brew version of go
-      run: brew uninstall --ignore-dependencies go
+#    - name: Set up Homebrew
+#      uses: Homebrew/actions/setup-homebrew@master
+#
+#    - name: uninstall brew version of go
+#      run: brew uninstall --ignore-dependencies go
 
     - name: Set up Go 1.x
       uses: actions/setup-go@v2
@@ -25,8 +25,8 @@ jobs:
         go-version: ^1.14
       id: go
 
-    - name: Set up portmidi
-      run: brew install portmidi
+#    - name: Set up portmidi
+#      run: brew install portmidi
   
     - name: Check out code 
       uses: actions/checkout@v2
