add goland config

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,12 @@ preferences.json
 # vendor/
 /javauitest/uitest/target/
 /javauitest/uitest/nbproject/
+
+### goland junk:
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+
