--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,7 +10,7 @@ jobs:
 
   build:
     name: Build
-    runs-on: macos-10.14
+    runs-on: macos-latest
     steps:
 
 #    - name: Set up Homebrew
