--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,8 +22,7 @@ jobs:
     - name: Set up Go 1.x 
       uses: actions/setup-go@v2
       with:
-        go-version:1.14
-#        go-version:^1.14
+        go-version: '1.14'
       id: go
 
 #    - name: Set up portmidi
